--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -21,6 +21,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
 
       - name: Setup Java
         uses: actions/setup-java@v4
@@ -75,6 +78,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
 
       - name: Azure Login
         uses: azure/login@v2
@@ -96,6 +102,8 @@ jobs:
         run: |
           echo "Listing contents of ${{ matrix.context }}"
           ls -la ${{ matrix.context }}
+          echo "Git submodule status:"
+          git submodule status || true
 
       - name: Verify Dockerfile presence
         run: |
