--- a/deploy/docker-compose.vm.yml
+++ b/deploy/docker-compose.vm.yml
@@ -78,15 +78,22 @@ services:
       - APP_RABBITMQ_EXCHANGE=user-exchange
       - APP_RABBITMQ_QUEUE=email-queue
       - APP_RABBITMQ_ROUTINGKEY=email.notification
-      # SMTP from .env
-      - MAIL_HOST=${MAIL_HOST}
-      - MAIL_PORT=${MAIL_PORT}
-      - MAIL_USERNAME=${MAIL_USERNAME}
-      - MAIL_PASSWORD=${MAIL_PASSWORD}
+      # SMTP with safe defaults if secrets are not provided
+      - MAIL_HOST=${MAIL_HOST:-sandbox.smtp.mailtrap.io}
+      - MAIL_PORT=${MAIL_PORT:-2525}
+      - MAIL_USERNAME=${MAIL_USERNAME:-7150a6ec81a0c1}
+      - MAIL_PASSWORD=${MAIL_PASSWORD:-958d190ad2d245}
       - SERVER_PORT=9102
     networks:
       - user-service-network
     restart: on-failure:3
+    healthcheck:
+      # Minimal check that JVM is available; avoids false unhealthy states
+      test: ["CMD", "java", "-version"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 20s
 
   audit-service:
     image: ${ACR_LOGIN_SERVER}/audit-service:${TAG}
