--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -212,12 +212,13 @@ jobs:
 
             $DC --env-file .env -f ./docker-compose.vm.yml pull
 
-            # CLEANUP: Force remove containers to bypass docker-compose 1.x 'ContainerConfig' bug
-            # This avoids the "KeyError: 'ContainerConfig'" when recreating containers from new images
-            echo "Removing existing containers to avoid recreation errors..."
-            $DC --env-file .env -f ./docker-compose.vm.yml down --remove-orphans || true
-            # Extra safety: remove by name pattern just in case
+            # CLEANUP: Force remove containers BEFORE down to prevent network removal errors
+            # and bypass docker-compose 1.x 'ContainerConfig' bugs.
+            echo "Force removing containers first..."
             docker ps -aq --filter name=proy17 | xargs -r docker rm -f || true
+            
+            echo "Removing networks and volumes..."
+            $DC --env-file .env -f ./docker-compose.vm.yml down --remove-orphans || true
 
             # Run compose up and collect diagnostics if it fails
             set +e
