--- a/deploy/docker-compose.vm.yml
+++ b/deploy/docker-compose.vm.yml
@@ -195,11 +195,9 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka:9092"
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
     depends_on:
-      kafka:
-        condition: service_healthy
+      - kafka
     networks:
       - kafka-network
-    restart: unless-stopped
 
   postgres:
     image: postgres:15
