--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -238,8 +238,7 @@ services:
       KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "kafka:9092"
       KAFKA_CLUSTERS_0_ZOOKEEPER: zookeeper:2181
     depends_on:
-      kafka:
-        condition: service_healthy
+      - kafka
     networks:
       - kafka-network
 
