--- a/deploy/docker-compose.vm.yml
+++ b/deploy/docker-compose.vm.yml
@@ -94,10 +94,10 @@ services:
       - APP_RABBITMQ_QUEUE=email-queue
       - APP_RABBITMQ_ROUTINGKEY=email.notification
       # SMTP with safe defaults if secrets are not provided
-      - MAIL_HOST=${MAIL_HOST:-sandbox.smtp.mailtrap.io}
-      - MAIL_PORT=${MAIL_PORT:-2525}
-      - MAIL_USERNAME=${MAIL_USERNAME:-7150a6ec81a0c1}
-      - MAIL_PASSWORD=${MAIL_PASSWORD:-958d190ad2d245}
+      - MAIL_HOST=sandbox.smtp.mailtrap.io
+      - MAIL_PORT=2525
+      - MAIL_USERNAME=7150a6ec81a0c1
+      - MAIL_PASSWORD=958d190ad2d245
       - SERVER_PORT=9102
     networks:
       - user-service-network
